--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,10 +1,11 @@
-$font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $link-color: #00b7ff;
 
 body {
   margin: 0;
   padding: 50px;
   font-family: $font-sans;
+  background-color: dimgrey; /* dark-mode */
 }
 
 a {
