--- a/views/log-in.hbs
+++ b/views/log-in.hbs
@@ -1,4 +1,4 @@
-Sign-up:
+Log-in:
 
 <form method='POST'>
    <label for='input-username'>Your Username</label>
@@ -7,5 +7,5 @@ Sign-up:
    <label for='input-password'>Password</label>
    <input id='input-password' type='password' name='password' placeholder='Password' required minlength='5' />
 
-   <button>Sign Up</button>
+   <button>Log In</button>
 </form>
