--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,2 +1,4 @@
+<h3>main page</h3>
 <img src='./images/funny_cat.jpg' />
-<a href='/'>Take me back!</a>
+<br />
+<a href='/'><button class='btn btn-secondary btn-sm'>Take me back!</button></a>
