--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -3,7 +3,7 @@
 ## Iteration 4 Bonus - Frontend validations ##
 ############################################## }}
 
-Sign-up:
+<h3>Sign-up</h3>
 
 <form method='POST'>
    <label for='input-username'>Your Username</label>
@@ -12,5 +12,5 @@ Sign-up:
    <label for='input-password'>Password</label>
    <input id='input-password' type='password' name='password' placeholder='Password' required='required' minlength='5' />
 
-   <button>Sign Up</button>
+   <button class='btn btn-secondary'>Sign Up</button>
 </form>
