--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,49 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Lab Express Basic Authentication</title>
-    <link rel='stylesheet' href='/styles/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+   <head>
+      <title>Lab Express Basic Authentication</title>
+
+      <!-- ### Link Bootstrap 5.1.1 CSS CDN ### -->
+      <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU' crossorigin='anonymous' />
+
+      <!-- ### Link own CSS stylesheet ### -->
+      <link rel='stylesheet' href='/styles/style.css' />
+   </head>
+   <body>
+
+      <!-- ### Navbar begins here ### -->
+      <nav class='navbar navbar-expand-md navbar-dark bg-dark'>
+         <div class='container-fluid'>
+            <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
+               <span class='navbar-toggler-icon'></span>
+            </button>
+            <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+               <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
+                  <li class='nav-item'>
+                     <a class='nav-link active' aria-current='page' href='/'>Home</a>
+                  </li>
+                  <li class='nav-item'>
+                     <a class='nav-link' href='/main'>Main</a>
+                  </li>
+                  <li class='nav-item'>
+                     <a class='nav-link' href='/private'>Private</a>
+                  </li>
+                  <li class='nav-item to-right'>
+                     <a class='nav-link' href='/profile'>Profile</a>
+                  </li>
+                  <li class='nav-item'>
+                     <a class='nav-link' href='/log-in'>Log-in</a>
+                  </li>
+                  <li class='nav-item'>
+                     <a class='nav-link' href='/sign-up'>Sign-up</a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </nav>
+      <div class='container mt-5'>
+
+         {{{body}}}
+
+      </div>
+   </body>
 </html>
