--- a/views/log-in.hbs
+++ b/views/log-in.hbs
@@ -1,4 +1,4 @@
-Log-in:
+<h3>Log-in</h3>
 
 <form method='POST'>
    <label for='input-username'>Your Username</label>
@@ -7,5 +7,5 @@ Log-in:
    <label for='input-password'>Password</label>
    <input id='input-password' type='password' name='password' placeholder='Password' required='required' minlength='5' />
 
-   <button>Log In</button>
+   <button class='btn btn-secondary'>Log In</button>
 </form>
