--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,2 +1,4 @@
-<h1>Private Page</h1>
+<h3>{{userName}}'s private page</h3>
 <img src='./images/monkey.gif' />
+<br />
+<a href='/'><button class='btn btn-secondary btn-sm'>Take me back!</button></a>
