solve iteration 6 bonus: editing profile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,4 +24,11 @@ img {
 button {
   margin-top: 2em; }
 
+a:active,
+a:link,
+a:visited,
+a:hover {
+  color: white;
+  text-decoration: none; }
+
 /*# sourceMappingURL=style.css.map */
